--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ dependencies = [
     "tk (>=0.1.0,<0.2.0)",
     "matplotlib (>=3.10.0,<4.0.0)",
     "python-docx (>=1.1.2,<2.0.0)"
+    "customtkinter (>=5.2.1,<6.0.0)"
 ]
 
 [build-system]
